<resources>
    <string name="app_name">Oblig1</string>
    <string name="legg_til_bilde">Legg til bilde</string>
    <string name="ta_quizen">Ta quizen</string>
    <string name="database">Database</string>
    <string name="legg_til">Legg til</string>
    <string name="name">Name</string>
    <string name="navn_katt_3">Navn: Katt 3</string>
    <string name="navn_katt_2">Navn: Katt 2</string>
    <string name="navn_katt_1">Navn: Katt 1</string>
    <string name="fjern">Fjern</string>
    <string name="navn_hj_rdis">Navn: Hjørdis</string>
    <string name="navn_atle">Navn: Atle</string>
    <string name="navn_figaro">Navn: Figaro</string>
    <string name="catone">CatOne</string>
    <string name="cattwo">CatTwo</string>
    <string name="catthree">CatThree</string>
    <string name="velg_bilde">Velg bilde</string>
    <string name="bilde">Bilde</string>
    <string name="sjekk_svar">Sjekk svar</string>
    <string name="neste">Neste</string>
</resources>