<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="74dp"
        android:background="#FFFFFF"
        android:text="@string/ta_quizen"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonBilde"
        app:layout_constraintStart_toStartOf="@+id/buttonBilde"
        app:rippleColor="#FAFAFA"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonBilde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="314dp"
        android:text="@string/legg_til_bilde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:text="@string/database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBilde" />
</androidx.constraintlayout.widget.ConstraintLayout>